force-app/main/default/objects/Job_Suggestion__c/Job_Suggestion__c.object-meta.xml
<CustomObject>
    <label>Job Suggestion</label>
    <pluralLabel>Job Suggestions</pluralLabel>
    <nameField>
        <displayFormat>JS-{0000}</displayFormat>
        <label>Job Suggestion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>