force-app/main/default/objects/Job_Suggestion__c/fields/Apply_URL__c.field-meta.xml
<CustomField>
    <fullName>Apply_URL__c</fullName>
    <label>Apply URL</label>
    <type>Url</type>
</CustomField>