force-app/main/default/objects/Job_Suggestion__c/fields/Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter__c</fullName>
    <label>Cover Letter</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>10</visibleLines>
</CustomField>