force-app/main/default/objects/Job_Suggestion__c/fields/Interview_Questions__c.field-meta.xml
<CustomField>
    <fullName>Interview_Questions__c</fullName>
    <label>Interview Questions</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>10</visibleLines>
</CustomField>