force-app/main/default/objects/Job_Suggestion__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <type>Number</type><precision>3</precision><scale>0</scale>
</CustomField>