force-app/main/default/objects/Job_Suggestion__c/fields/Outreach_Message__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Message__c</fullName>
    <label>Outreach Message</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>5</visibleLines>
</CustomField>