force-app/main/default/objects/Job_Suggestion__c/fields/Rejection_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Analysis__c</fullName>
    <label>Rejection Analysis</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>5</visibleLines>
</CustomField>