force-app/main/default/objects/Job_Suggestion__c/fields/Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Role_Title__c</fullName>
    <label>Role Title</label>
    <type>Text</type><length>255</length>
</CustomField>