force-app/main/default/objects/Job_Suggestion__c/fields/Skill_Gap__c.field-meta.xml
<CustomField>
    <fullName>Skill_Gap__c</fullName>
    <label>Skill Gap</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines>
</CustomField>