force-app/main/default/objects/Job_Suggestion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Saved</fullName><default>true</default></value><value><fullName>Applied</fullName><default>false</default></value><value><fullName>Rejected</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>