force-app/main/default/objects/Job_Suggestion__c/fields/Tailored_Resume__c.field-meta.xml
<CustomField>
    <fullName>Tailored_Resume__c</fullName>
    <label>Tailored Resume</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>10</visibleLines>
</CustomField>