force-app/main/default/objects/Job_Suggestion__c/fields/Why_It_Fits__c.field-meta.xml
<CustomField>
    <fullName>Why_It_Fits__c</fullName>
    <label>Why It Fits</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines>
</CustomField>