force-app/main/default/objects/Job_Suggestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role_Title__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Match_Score__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Job Suggestions</label>
</ListView>